--- a/_config.yml
+++ b/_config.yml
@@ -100,6 +100,10 @@ defaults:
       comments: true
       share: true
       related: true
+      toc: true
+      toc_label: "Daftar Isi"
+      toc_sticky: true
+      
   # _pages
   - scope:
       path: "_pages"
